# Sparkle

./: BUILD.gn  build_sparkle_framework.py  tar_sparkle_binaries.py
Sparkle/: SUBinaryDeltaApply.m  SUBinaryDeltaCommon.h  SUBinaryDeltaCreate.m  SUBinaryDeltaUnarchiver.m  SUUpdater.h
Sparkle.xcodeproj/: project.pbxproj
